# WraithOS

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/sentinel-core/: Cargo.toml  README.md
crates/sentinel-core/.node1/: identity.key
crates/sentinel-core/.nodeA/: identity.key
crates/sentinel-core/.nodeB/: identity.key
crates/sentinel-core/.nodeC/: identity.key
crates/sentinel-core/.sentinel/: identity.key
crates/sentinel-core/crates/bench/: Cargo.toml
crates/sentinel-core/crates/sentinel-crypto/src/: lib.rs
crates/sentinel-core/crates/sentinel-node/: Cargo.toml
crates/sentinel-core/crates/sentinel-node/src/: handlers.rs  main.rs
crates/sentinel-core/crates/sentinel-protocol/: Cargo.toml
crates/sentinel-core/crates/sentinel-protocol/src/: codec.rs  error.rs  lib.rs  messages.rs
crates/sentinel-core/crates/sentinel-signaler/: Cargo.toml
crates/sentinel-core/crates/sentinel-signaler/src/: main.rs
crates/sentinel-core/crates/sentinel-transport/: Cargo.toml
crates/sentinel-core/crates/sentinel-transport/src/: connector.rs  lib.rs
crates/sentinel-core/docs/: architecture.md  protocol.md
crates/sentinel-core/src/: discovery.rs  engine.rs  lib.rs
crates/sentinel-core/src/network/: mod.rs  socket.rs
crates/wraith-cli/: Cargo.toml
crates/wraith-cli/src/: main.rs
crates/wraith-fs/: Cargo.toml
crates/wraith-gui/: Cargo.toml
crates/wraith-gui/src/: main.rs
crates/wraith-gui/ui/: appwindow.slint
