[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sentinel-protocol = { path = "crates/sentinel-protocol" }
sentinel-crypto = { path = "crates/sentinel-crypto" }
sentinel-transport = { path = "crates/sentinel-transport" }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
mdns-sd = { workspace = true }
uuid = { workspace = true }
socket2 = { workspace = true }
stunclient = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
