[package]
name = "wraith-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# The CLI engine
clap = { version = "4.0", features = ["derive"] }
# The Crypto & Identity
bip39 = { version = "2.0", features = ["rand"] }
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
# Our internal crates
sentinel-crypto = { path = "../sentinel-core/crates/sentinel-crypto" }
hex.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
