[package]
name = "wraith-gui"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
slint = "1.3" # The GUI framework
sentinel-crypto = { path = "../sentinel-core/crates/sentinel-crypto" }
bip39 = { version = "2.0", features = ["rand"] }
# We'll use this to pass data between Rust and the UI
serde = { version = "1.0", features = ["derive"] }
rand.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
confy = "2.0.0"

[build-dependencies]
slint-build = "1.3"
