[package]
name = "sentinel-signaler"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dashmap = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Internal Workspace Dependencies
sentinel-crypto = { path = "../sentinel-crypto" }
sentinel-protocol = { path = "../sentinel-protocol" }
futures = "0.3.31"
tokio-util = { version = "0.7.18", features = ["codec"] }
